--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -50,7 +50,7 @@ html{
 header{
     position: relative;
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     overflow: hidden;
 }
 
@@ -148,10 +148,65 @@ header{
 
 .nav-link{
     color: var(--gainsboro);
+    padding: 5px 0;
     font-size: var(--fs-4);
     transition: var(--default-trasition);
 }
 
 .nav-link:hover{
     color: var(--liver-chestunut);
+}
+
+.nav-footer{
+    transform: translateY(50px);
+    transition: 1s ease;
+    opacity: 0;
+}
+
+.nav.active .nav-footer{
+    transform: translateY(0);
+    opacity: 1;
+    transition-delay: 1s;
+}
+
+.social-link{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.social-link a{
+    padding: 10px;
+    background: hsla(0, 0%, 100%, 0.05);
+    transition: var(--default-trasition);
+}
+
+.social-link a:hover{
+    background: hsla(0, 0%, 100%, 0.1);
+}
+
+.social-link ion-icon{
+    color: var(--battleship-gray);
+    font-size: var(--fs-4);
+}
+
+.nav-footer p{
+    font-size: var(--fs-5);
+    color: var(--battleship-gray);
+}
+
+.nav-footer p a{
+    color: var(--gainsboro);
+}
+
+.link-profile{
+    
+    border-bottom: 1px solid hsla(100, 100%, 100%, 0.2);
+    transition: var(--default-trasition);
+}
+
+.link-profile:hover{
+    color: var(--liver-chestunut);
+    border-bottom: 1px solid hsla(100, 100%, 100%, 0.4);
 }
