--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -210,3 +210,123 @@ header{
     color: var(--liver-chestunut);
     border-bottom: 1px solid hsla(100, 100%, 100%, 0.4);
 }
+
+
+.section-padding{
+    padding: 80px 10px;
+}
+
+.intro{
+    text-align: center;
+}
+
+.intro-profile{
+    position: relative;
+    padding: 40px;
+    margin-bottom: 30px;
+}
+
+.intro-boder{
+    position: absolute;
+    border: 1px solid hsla(100, 100%, 100%, 0.2);
+    transition: var(--default-trasition);
+    pointer-events: none;
+}
+
+
+.intro-boder.one {inset: 0 20px;}
+.intro-boder.two {inset: 20px 0;}
+
+.intro:hover .intro-boder{
+    border: 1px solid hsla(100, 100%, 1005, 0.3);
+}
+
+.intro-profile .img-box{
+    margin-bottom: 30px;
+}
+
+.intro-profile p {
+    font-size: var(--fs-5);
+    text-transform: uppercase;
+    font-weight: 500;
+    color: var(--battleship-gray);
+    margin-bottom: 10px;
+}
+
+.intro-profile .profile-name{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 30px;
+    color: var(--gainsboro);
+    margin-bottom: 20px;
+}
+
+.profile-name span{
+    color: var(--may-green);
+}
+
+.link-profile{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    color: var(--battleship-gray);
+    font-size: var(--fs-5);
+}
+
+.link-profile:hover{
+    color: var(--gainsboro);
+}
+
+.link-profile .circle{
+    padding: 5px;
+    border-radius: 50%;
+    background: var(--may-green);
+}
+
+.link-profile span{
+    display: block;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+.section-padding{
+    padding: 80px 10px;
+}
+
+.section-subtitle{
+    color: var(--liver-chestunut);
+    font-size: var(--fs-5);
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: var(--letter-spacing);
+    margin-bottom: 50px;
+}
+
+.section-title{
+    position: relative;
+    color: var(--gainsboro);
+    font-size: var(--fs-1);
+    font-weight: 500;
+    padding-bottom: 15px;
+    margin-bottom: 35px;
+}
+
+.section-title::after{
+    content: "";
+    position: absolute;
+    background: hsla(100, 100%, 100%, 0.2);
+    height: 2px;
+    width: 150px;
+    bottom: 0;
+    left: 0;
+}
+.section-desc{
+    color: var(--battleship-gray);
+    font-size: var(--fs-4);
+    margin-bottom: 60px;
+}
+
+
