--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -355,6 +355,127 @@ header{
     color: var(--gainsboro);
 }
 
+.downloaded_cv{
+    border: 2px solid hsla(100, 100%, 100%, 0.2);
+    width: 100%;
+    padding: 60px 0;
+    color: var(--battleship-gray);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    transition: var(--default-trasition);
+}
 
+.downloaded_cv:hover{color: var(--liver-chestunut);}
 
+.downloaded_cv ion-icon{
+    font-size: 60px;
+    color: var(--gainsboro);
+}
+
+.downloaded_cv span{
+    font-size: var(--fs-1);
+    text-transform: uppercase;
+    font-weight: 500;
+}
+
+.about-tab{
+    margin-top: 80px;
+}
+
+.tab-nav{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px 0;
+    margin-bottom: 40px;
+}
+
+.tab-nav li{position: relative;}
+
+.tab-nav li:not(:last-child){padding-right: 80px;}
+
+.tab-nav li:not(:last-child)::after{
+    content: "";
+    position: absolute;
+    background: hsla(100, 100%, 100%, 0.2);
+    width: 40px;
+    height: 2px;
+    top: 55%;
+    right: 20px;
+}
+
+.tab-nav li .tab-button{
+    color: var(--battleship-gray);
+    font-size: var(--fs-1);
+    border-bottom: 1px solid transparent;
+}
+
+.tab-nav li .tab-button.active{
+    color: var(--liver-chestunut);
+    border-color: var(--liver-chestunut);
+}
+
+.tab-content{display: none;}
+
+.tab-content.active{
+    display: block;
+    animation: fade 0.75s ease;
+}
+
+@keyframes fade{
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+}
+
+.content-card{
+    position: relative;
+    background: var(--smoky-black);
+    border: 1px solid var(--eerie-black);
+    padding: 40px;
+    margin-bottom: 20px;
+}
+
+.content-card::before{
+    content: "";
+    position: absolute;
+    background: hsla(100, 100%, 100%, 0.2);
+    width: 3px;
+    height: 50px;
+    top: 50%;
+    left: -1px;
+    transform: translateY(-50%);
+}
+
+.content-card .card-head{
+    display: flex;
+    align-items: start;
+    flex-direction: column;
+    gap: 5px;
+    margin-bottom: 15px;
+}
+
+.content-card .card-head h4{
+    color: var(--gainsboro);
+    font-size: var(--fs-5);
+    font-weight: 400;
+    text-transform: uppercase;
+}
+
+.content-card .card-head p{color: var(--battleship-gray);}
+
+.content-card .card-body h3{
+    color: var(--gainsboro);
+    font-size: var(--fs-3);
+    font-weight: 400;
+    margin-bottom: 18px;
+}
+
+.content-card .card-body p{
+    color: var(--battleship-gray);
+    font-size: var(--fs-5);
+    line-height: 24px;
+}
 
