--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -630,3 +630,50 @@ header{
 }
 
 .portfolio-carousel-card .card-body a:hover{color: var(--liver-chestunut);}
+
+.service-card{
+    background: var(--smoky-black);
+    border: 1px solid var(--eerie-black);
+    margin-bottom: 20px;
+}
+
+.service-card .card-body{
+    position: relative;
+    padding: 40px;
+}
+
+.service-card .card-body::after{
+    content: "";
+    position: absolute;
+    background: hsla(100, 100%, 100%, 0.2);
+    width: 3px;
+    height: 50px;
+    top: 50%;
+    left: -1px;
+    transform: translateY(-50%);
+}
+
+.service-card .card-body h3{
+    color: var(--gainsboro);
+    font-size: var(--fs-3);
+    font-weight: 400;
+    margin-bottom: 18px;
+}
+
+.service-card .card-body p{
+    color: var(--battleship-gray);
+    font-size: var(--fs-5);
+}
+
+.service-card .card-footer{
+    border-top: 1px solid hsla(100, 100%, 100%, 0.05);
+    padding: 20px 40px;
+}
+
+.service-card .card-footer span{ color: var(--battleship-gray);}
+
+.service-card .card-footer div{
+    color: var(--liver-chestunut);
+    font-size: var(--fs-5);
+    font-weight: 500;
+}
