--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -718,3 +718,156 @@ header{
     font-weight: 400;
     text-transform: uppercase;
 }
+
+.contact-form{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-bottom: 80px;
+}
+
+.contact-form .wrapper{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.contact-form label{
+    display: inline-block;
+    background: var(--eerie-black-dark);
+    color: var(--liver-chestunut);
+    transform: translate(10px, 10px);
+    padding: 0 10px;
+}
+
+.contact-form :is(input, textarea){
+    display: block;
+    width: 100%;
+    padding: 20px;
+    background: transparent;
+    border: 1px solid hsla(100, 100%, 100%, 0.2);
+    color: var(--light-gray);
+    letter-spacing: 0.5px;
+    outline: none;
+    transition: var(--default-trasition);
+}
+
+.contact-form textarea{
+    max-height: 400px;
+    resize: vertical;
+}
+
+.contact-form :is(input, textarea):hover{border-color: var(--battleship-gray);}
+
+.contact-form :is(input, textarea):focus{border-color: var(--liver-chestunut);}
+
+.contact-form button{
+    color: var(--gainsboro);
+    font-size: var(--fs-5);
+    font-weight: 600;
+    text-transform: uppercase;
+    border: 2px solid hsla(100, 100%, 100%, 0.2);
+    width: 100%;
+    text-align: center;
+    padding: 15px;
+    margin-top: 20px;
+    transition: var(--default-trasition);
+}
+
+.contact-form button:hover{
+    color: var(--liver-chestunut);
+    border-color: var(--liver-chestunut);
+}
+
+.address, .phone, .email{margin-bottom: 50px;}
+
+:is(.address, .phone, .email) h4{
+    color: var(--battleship-gray);
+    font-size: var(--fs-6);
+    font-weight: 400;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+}
+
+.address address,
+.phone a{
+    color: var(--gainsboro);
+    font-size: var(--fs-3);
+    font-style: normal;
+    transition: var(--default-trasition);
+}
+
+.phone a:hover{color: var(--liver-chestunut);}
+
+.email a{
+    color: var(--gainsboro);
+    font-size: var(--fs-5);
+}
+
+.footer{
+    position: relative;
+    padding: 50px 10px;
+    border-top: 1px solid hsla(100, 100%, 100%, 0.2);
+}
+
+.go-top{
+    position: fixed;
+    background: var(--eerie-black-dark);
+    bottom: 10px;
+    right: 5%;
+    height: 50px;
+    width: 50px;
+    transform: translateY(-50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.go-top .arrow{
+    position: relative;
+    width: 1px;
+    height: 25px;
+    background: var(--battleship-gray);
+    border-color: var(--battleship-gray);
+    transition: var(--default-trasition);
+}
+
+.go-top:hover .arrow{
+    background: var(--liver-chestunut);
+    border: var(--liver-chestunut);
+}
+
+.go-top .arrow-head{
+    position: absolute;
+    top: 1px;
+    left: -7px;
+    width: 15px;
+    height: 15px;
+    border-width: 1px 0 0 1px;
+    border-style: solid;
+    border-color: inherit;
+    transform: rotate(45deg);
+}
+
+.go-top::after{
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    border: 1px solid transparent;
+    transition: var(--default-trasition);
+}
+
+.go-top:hover::after{
+    border-color: var(--liver-chestunut);
+    padding: 25px;
+}
+
+.footer .copyright{
+    color: var(--battleship-gray);
+    font-size: var(--fs-5);
+}
+
+.copyright a{ color: var(--gainsboro);}
