--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -50,7 +50,7 @@ html{
 header{
     position: relative;
     width: 100%;
-    /* height: 100vh; */
+    height: 100vh;
     overflow: hidden;
 }
 
