--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -827,7 +827,7 @@ header{
 
 .go-top{
     position: fixed;
-    background: var(--eerie-black-dark);
+    background: var(--light-gray);
     bottom: 10px;
     right: 5%;
     height: 50px;
@@ -849,8 +849,8 @@ header{
     position: relative;
     width: 1px;
     height: 25px;
-    background: var(--battleship-gray);
-    border-color: var(--battleship-gray);
+    background: var(--eerie-black-dark);
+    border-color: var(--light-gray);
     transition: var(--default-trasition);
 }
 
@@ -867,7 +867,7 @@ header{
     height: 15px;
     border-width: 1px 0 0 1px;
     border-style: solid;
-    border-color: inherit;
+    border-color: var(--eerie-black-dark);
     transform: rotate(45deg);
 }
 
